:fire: UserDatails 분리 전, 사용자 인증 후 기능 사용 시 유효기간 갱신 전까지 구현 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=false
 
-jwt.secret = secure
-jwt.expiration = 86400000
+jwt.secret = My-very-long-secret-key-that-is-at-least-64-characters-long-and-secure
+jwt.expiration = 1800000
