--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	//jakarta.servlet 관련 의존성을 추가하여 Servlet API를 포함
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
-	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'jakarta.annotation:jakarta.annotation-api:2.0.0'
 }
 
 tasks.named('test') {
